# python-project-lvl2

./: .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  cli.py  diff.py  difference_calculator.py  generate_diff.py  parsers.py
gendiff/format/: __init__.py  default.py  j_son.py  make_json.py  plain.py  rendering.py
gendiff/scripts/: gendiff.py
tests/: test_answers.py  test_gendiff.py  test_json.py  test_yml.py  tests_answers.py
tests/fixtures/: after3.json  after3.yml  after_complete.yml  answer.txt  answer2.txt  answer3.txt  answer3_plain.txt  answer_complete_test.txt  answer_json.json  answer_json.txt  answer_make_json.txt  answer_make_json_complete.txt  answer_plain.txt  before.json  before_complete.yml  test_answer_json.json
